watch nav link fix, watch information blurry text fix

--- a/app/src/styles/_scrollbar.sass
+++ b/app/src/styles/_scrollbar.sass
@@ -1,8 +1,6 @@
 ::-webkit-scrollbar
-    width: 5px
+    width: 10px
     background-color: $grey
-    &:hover
-        width: 10px
 
 ::-webkit-scrollbar-thumb
     border-radius: 20px
@@ -12,9 +10,7 @@
 
 ::-webkit-scrollbar:horizontal
     background-color: $grey
-    height: 5px
-    &:hover
-        height: 10px
+    height: 10px
 
 ::-webkit-scrollbar-thumb:horizontal
     border-radius: 20px
