--- a/app/src/styles/_watch.sass
+++ b/app/src/styles/_watch.sass
@@ -2,15 +2,14 @@
     position: absolute
     width: 100%
     height: 100%
-    overflow-y: auto
+    overflow-y: scroll
     .watch-container
         margin-top: 30px
         height: 90%
         width: 80%
         position: absolute
-        left: 50%
-        top: 50%
-        transform: translate(-50%, -50%)
+        left: 10%
+        top: 5%
         .player-wrapper
             position: relative
             width: 100%
